--- a/Curso/ProjetoSenha/src/views/login.ejs
+++ b/Curso/ProjetoSenha/src/views/login.ejs
@@ -9,42 +9,43 @@
                 <div class="col-lg-8 my-3">
                     <h1 class="text-center">Login</h1>
                     <p class="text-center lead">SigIn | SigUp</p>
+                    <%- include('includes/messages') %>
 
-                    <div class="row">
-                        <div class="col-lg">
-                            <h4>Faça seu cadastro</h4>
-                            <p>Para criar sua conta basta inserir o e-mail e senha.</p>
-                            <form action="/login/register" method="POST">
-                                <input type="hidden" name="_csrf" value=<%=csrfToken%>>
-                                <div class="form-group">
-                                    <label>Email</label>
-                                    <input type="email" class="form-control" name="email">
-                                </div>
-                                <div class="form-group">
-                                    <label>Senha</label>
-                                    <input type="password" class="form-control" name="password">
-                                </div>
-                                <button type="submit" class="btn btn-primary">Cadastrar</button>
-                            </form>
-                        </div>
+                        <div class="row">
+                            <div class="col-lg">
+                                <h4>Faça seu cadastro</h4>
+                                <p>Para criar sua conta basta inserir o e-mail e senha.</p>
+                                <form action="/login/register" method="POST">
+                                    <input type="hidden" name="_csrf" value=<%=csrfToken%>>
+                                    <div class="form-group">
+                                        <label>Email</label>
+                                        <input type="email" class="form-control" name="email">
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Senha</label>
+                                        <input type="password" class="form-control" name="password">
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Cadastrar</button>
+                                </form>
+                            </div>
 
-                        <div class="col-lg">
-                            <h4>Login</h4>
-                            <p>Caso já tenha um login, faça seu login!</p>
-                            <form action="/login/login" method="POST">
-                                <input type="hidden" name="_csrf" value=<%=csrfToken%>>
-                                <div class="form-group">
-                                    <label>Email</label>
-                                    <input type="email" class="form-control" name="email">
-                                </div>
-                                <div class="form-group">
-                                    <label>Senha</label>
-                                    <input type="password" class="form-control" name="password">
-                                </div>
-                                <button type="submit" class="btn btn-primary">Login</button>
-                            </form>
+                            <div class="col-lg">
+                                <h4>Login</h4>
+                                <p>Caso já tenha um login, faça seu login!</p>
+                                <form action="/login/login" method="POST">
+                                    <input type="hidden" name="_csrf" value=<%=csrfToken%>>
+                                    <div class="form-group">
+                                        <label>Email</label>
+                                        <input type="email" class="form-control" name="email">
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Senha</label>
+                                        <input type="password" class="form-control" name="password">
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Login</button>
+                                </form>
+                            </div>
                         </div>
-                    </div>
                 </div>
 
                 <div class="col-lg-2">
