Adiciona login do usário com as validações

--- a/Curso/ProjetoSenha/src/views/index.ejs
+++ b/Curso/ProjetoSenha/src/views/index.ejs
@@ -9,15 +9,17 @@
                     <h1 class="text-center">Password</h1>
                     <p class="text-center lead">Senhas cadastradas</p>
 
-                    <div class="responsive-table">
-                        <table class="table my-3">
-                            <tr>
-                                <td>www.google.com.br</td>
-                                <td>loginGmail</td>
-                                <td>senhaGmail</td>
-                            </tr>
-                        </table>
-                    </div>
+                    <%- include('includes/messages') %>
+
+                        <div class="responsive-table">
+                            <table class="table my-3">
+                                <tr>
+                                    <td>www.google.com.br</td>
+                                    <td>loginGmail</td>
+                                    <td>senhaGmail</td>
+                                </tr>
+                            </table>
+                        </div>
                 </div>
 
                 <div class="col-lg-2">
