--- a/Curso/ProjetoSenha/src/views/includes/navBar.ejs
+++ b/Curso/ProjetoSenha/src/views/includes/navBar.ejs
@@ -8,9 +8,20 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
+
+                <%if (user) {%>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/senhas/index">Cadastrar senha</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login/logout">Sair</a>
+                    </li>
+                    <% } else {%>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login/index">Entrar</a>
+                        </li>
+
+                        <%}%>
             </ul>
         </div>
     </div>
