Adiciona POST do site/senha cadastrado

--- a/Curso/ProjetoSenha/src/views/includes/navBar.ejs
+++ b/Curso/ProjetoSenha/src/views/includes/navBar.ejs
@@ -11,12 +11,12 @@
 
                 <%if (user) {%>
                     <li class="nav-item">
-                        <a class="nav-link" href="/senhas/index">Cadastrar senha</a>
+                        <a class="nav-link" href="/senha/index">Cadastrar senha</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/login/logout">Sair</a>
                     </li>
-                    <% } else {%>
+                    <% } else {%>contatocontato
                         <li class="nav-item">
                             <a class="nav-link" href="/login/index">Entrar</a>
                         </li>
