--- a/Curso/ProjetoSenha/src/views/login.ejs
+++ b/Curso/ProjetoSenha/src/views/login.ejs
@@ -31,7 +31,7 @@
 
                             <div class="col-lg">
                                 <h4>Login</h4>
-                                <p>Caso já tenha um login, faça seu login!</p>
+                                <p>Caso já tenha uma conta, faça seu login!</p>
                                 <form action="/login/login" method="POST">
                                     <input type="hidden" name="_csrf" value=<%=csrfToken%>>
                                     <div class="form-group">
